--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -31,10 +31,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: dependencies
-        run: npm install
-      - name: build
-        run: npm run build
+      # - name: dependencies
+      #   run: npm install
+      # - name: build
+      #   run: npm run build
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
